Kubernetes/whoami/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami-app
  template:
    metadata:
      labels:
        app: whoami-app
    spec:
      containers:
        - name: whoami-app
          image: containous/whoami
