Kubernetes/whoami/ingressRoute-secure.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mydomain.com`)
      kind: Rule
      services:
        - name: whoami-app
          port: 80
  tls: # This route uses TLS
    certResolver: myresolver
